use URI instead depreciated URL constructor